--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -1,4 +1,7 @@
-
+*{
+    padding: 0px;
+    margin: 0px;
+}
 
 #principal{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url("../img/fondo.jpg");
@@ -79,3 +82,6 @@
     padding:0rem 3rem;
 }
 
+.border{
+    border: 0.25rem solid rgb(18,49,50) !important;
+}
