--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -91,7 +91,7 @@
     border: 0.25rem solid rgb(18, 49, 50) !important;
 }
 
-#retiro ul, #formulario label  {
+#retiro ul, #formulario label {
     color: rgb(18, 49, 50);
 }
 
@@ -102,12 +102,24 @@
 }
 
 #formulario .form-control:focus {
-    border-color:rgba(160, 88, 65, 0.5) ;
+    border-color: rgba(160, 88, 65, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(160, 88, 65, 0.5);
 }
 
-#info{
-list-style-type: none;
-color: white;
-padding: 2rem
+#info {
+    list-style-type: none;
+    color: white;
+    padding: 2rem
 }
+
+.terminos {
+    list-style-type: lower-roman;
+    color: rgb(18, 49, 50);
+
+}
+
+.terminos li {
+    margin: 1rem;
+    text-align: justify;
+}
+
