--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -70,7 +70,7 @@
 }
 
 .fondo-verde {
-    background-color: rgb(18, 49, 50)
+    background-color: rgb(18, 49, 50);
 }
 
 #enlaces li a {
@@ -138,4 +138,27 @@
 
 #descuento{
     font-size: calc(3rem + 1.5vw)!important;
+}
+
+#crear {
+    background-image: linear-gradient(rgba(214, 214, 214, 0.363), rgba(202, 199, 199, 0.349)), url("../img/principal/cactus_fondo.jpg");
+    background-size: cover;
+    height: 50rem;
+}
+
+#crear label{
+    color: rgb(18, 49, 50);
+}
+
+#crear .form-control:focus {
+    border-color: rgba(160, 88, 65, 0.5);
+    box-shadow: 0 0 0 0.25rem rgba(160, 88, 65, 0.5);
+}
+
+#crear .form-control:hover {
+    box-shadow: 0 0 0 0.25rem rgba(160, 88, 65, 0.5);
+}
+
+#crear .form-control {
+    border-color: rgba(160, 88, 65, 0.5);
 }
