--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -12,6 +12,8 @@
     font-weight: bold;
 }
 
+
+
 .texto-base, .texto-base .navbar-nav .nav-link {
     color: rgb(160, 88, 65);
     text-align: center;
@@ -123,7 +125,6 @@
 .terminos {
     list-style-type: lower-roman;
     color: rgb(18, 49, 50);
-
 }
 
 .terminos li {
@@ -150,15 +151,19 @@
     color: rgb(18, 49, 50);
 }
 
-#crear .form-control:focus {
+.form-input .form-control:focus {
     border-color: rgba(160, 88, 65, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(160, 88, 65, 0.5);
 }
 
-#crear .form-control:hover {
+.form-input .form-control:hover {
     box-shadow: 0 0 0 0.25rem rgba(160, 88, 65, 0.5);
 }
 
-#crear .form-control {
+.form-input .form-control {
     border-color: rgba(160, 88, 65, 0.5);
+}
+
+.login-input{
+    width: 25rem;
 }
