--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -12,7 +12,9 @@
     font-weight: bold;
 }
 
-
+.texto-verde{
+   color: rgb(18, 49, 50);
+}
 
 .texto-base, .texto-base .navbar-nav .nav-link {
     color: rgb(160, 88, 65);
@@ -274,3 +276,31 @@
     border: 0;
     transition: all .2s ease;
   }
+
+
+  .product-card{
+    width: 18rem;
+    height: 45rem;
+    background:#fff;
+    padding:15px;
+    border-radius:6px;
+
+  }
+  .product-card:hover{
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  }
+  
+
+  .product-img{
+      height: 18rem;
+      opacity:0.7;
+      transition: all 0.2s ease-in-out;
+  }
+
+
+  .product-img:hover{
+    opacity:1;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    transform:translate(2%,-3%);
+  }
+  
