--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -279,8 +279,7 @@
 
 
   .product-card{
-    width: 18rem;
-    height: 45rem;
+    width: 16rem;
     background:#fff;
     padding:15px;
     border-radius:6px;
@@ -292,13 +291,13 @@
   
 
   .product-img{
-      height: 18rem;
+      height: 13rem;
       opacity:0.7;
       transition: all 0.2s ease-in-out;
   }
 
-
-  .product-img:hover{
+  .product-card:hover > .product-img{
+    transition: all 0.2s ease-in-out;
     opacity:1;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     transform:translate(2%,-3%);
