--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -70,6 +70,24 @@
     border-color: rgb(160, 88, 65);
 }
 
+.boton-verde {
+    color: rgb(237, 237, 237);
+    border-color: rgba(197, 197, 197, 0.897);
+    background-color: rgb(18, 49, 50);
+    border-radius: 0.25rem;
+}
+
+.boton-verde:active,
+.boton-verde:focus {
+    box-shadow: 0 0 0 0.25rem rgba(237, 237, 237, 0.5);
+}
+
+.boton-verde:hover {
+    color: #fff;
+    background-color: rgb(28, 109, 55);
+    border-color: rgb(18, 49, 50);
+}
+
 #especialistas {
     font-size: 1.5rem
 }
@@ -210,7 +228,6 @@
 }
 
 .file-upload-content {
-    display: none;
     text-align: center;
 }
 
